# simon

./: .gitignore  CMakeLists.txt  colors.cpp  colors.h  main.cpp  readme.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cmake.yml
scenes/: game.cpp  game.h
scenes/game/: board.cpp  board.h  color_button.cpp  color_button.h  game_manager.cpp  game_manager.h  score_manager.cpp  score_manager.h
